# mugennodb

./: .gitignore  .pre-commit-config.yaml  .repl_history  NEXTSTEPS.md  README.md  TASKS.md  como_Rodar.md  mypy.ini  pyproject.toml  shell.nix
app/: help_command.py  load_env.py  main.py
app/endpoints/: chapter_endpoints.py  country_endpoints.py  db_admin_endpoints.py  db_chapter_review_endpoints.py  db_mangaReview_endpoints.py  db_page_review_endpoints.py  manga_endpoints.py  manga_genre_endpoints.py  page_endpoints.py  read_endpoints.py  related_manga_endpoints.py  review_endpoints.py  tag_endpoints.py  user_endpoints.py
docs/: CODING_GUIDELINES.md  COMMENTS_SCHEME_EXAMPLE.md  DATABASE_MODEL.md  DATABASE_STRUCTURE.md  MODEL.md  PULL_REQUEST_GUIDELINES.md
docs/pdoc/: app.html  index.html  mugennodb.html  search.js
docs/pdoc/app/: endpoints.html  help_command.html  load_env.html  main.html
docs/pdoc/mugennodb/: __pycache__.html  destroy.html  (+6 more)
mugennocore/interfaces/: ichapter.py  ichapter_review.py  icountry.py  imanga.py  imanga_genre.py  imanga_review.py  ipage.py  ipage_review.py  iread.py  irelated_manga.py  ireview.py  itag.py  iuser.py
mugennocore/model/: chapter.py  chapter_review.py  country.py  genre.py  manga.py  manga_genre.py  manga_review.py  page.py  page_review.py  read.py  related_manga.py  reviews.py  tag.py  user.py
mugennodb/: consults.py  destroy.py  init.py  populate.py
mugennodb/conection/: asyncpg_database.py  database_protocol.py
mugennodb/database/: consults.sql  seeds.sql
mugennodb/utils/: bitmask.py
scripts/: create_init.py
(+47 files in other folders)
